# filings-iq

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2ec11ee5d0d2_add_full_text_search_to_filing_chunks.py  49a7bdcbee21_add_financial_facts_table.py  a94a8d4cd4e6_create_companies_and_filings_tables.py  b6fecdc0beee_add_filing_chunks_with_pgvector.py  d725e8ca3204_add_filing_sections_table.py
backend/: config.py  database.py
backend/api/: main.py
backend/api/routes/: comparison.py  filings.py  metrics.py  research.py  search.py
backend/evaluation/: runner.py
backend/ingestion/: edgar_client.py  ingest.py
backend/llm/: client.py
backend/models/: __init__.py  company.py  filing.py  filing_chunk.py  filing_section.py  financial_fact.py
backend/parsers/: section_parser.py  xbrl_parser.py
backend/retrieval/: chunker.py  embeddings.py  index.py  search.py
backend/schemas/: calculation.py  filing.py  research.py
backend/tools/: calculations.py  metrics.py  registry.py
backend/workflows/: agent.py  comparison.py  qa.py
docs/: evaluation-findings.md  product-requirements.md
scripts/: index_filings.py  ingest.py  run_eval.py
tests/evaluation/: eval_dataset.json  test_dataset.py
tests/integration/: test_metrics_api.py
tests/unit/: test_agent.py  test_calculations.py  test_chunker.py  test_comparison.py  test_edgar_client.py  test_embeddings.py  test_health.py  test_hybrid_search.py  test_qa.py  test_section_parser.py  test_xbrl_parser.py
